--- a/index.html
+++ b/index.html
@@ -1,47 +1,47 @@
-
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Alex Cooper - Designer & Developer</title>
-    <meta name="description" content="Portfolio of Alex Cooper, a designer and developer crafting exceptional digital experiences." />
-    <meta name="author" content="Alex Cooper" />
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Yassine Krichen - Software Engineer</title>
+        <meta
+            name="description"
+            content="Portfolio of Krichen Yassine, a software developer crafting exceptional digital experiences."
+        />
+        <meta name="author" content="Krichen Yassine" />
 
-    <meta property="og:title" content="Alex Cooper - Designer & Developer" />
-    <meta property="og:description" content="Portfolio of Alex Cooper, a designer and developer crafting exceptional digital experiences." />
-    <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+        <meta
+            property="og:title"
+            content="Krichen Yassine - Software Engineer"
+        />
+        <meta
+            property="og:description"
+            content="Portfolio of Krichen Yassine, a software developer crafting exceptional digital experiences."
+        />
 
-    <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@alexcooper_design" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
-    
-    <!-- Favicon -->
-    <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
-    
-    <!-- Preload animations -->
-    <style>
-      .preload * {
-        -webkit-transition: none !important;
-        -moz-transition: none !important;
-        -ms-transition: none !important;
-        -o-transition: none !important;
-        transition: none !important;
-      }
-    </style>
-  </head>
+        <!-- Favicon -->
+        <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
 
-  <body class="preload">
-    <div id="root"></div>
-    <!-- Remove preload class after page load -->
-    <script>
-      window.addEventListener('load', function() {
-        document.body.classList.remove('preload');
-      });
-    </script>
-    <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
-    <script src="https://cdn.gpteng.co/gptengineer.js" type="module"></script>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+        <!-- Preload animations -->
+        <style>
+            .preload * {
+                -webkit-transition: none !important;
+                -moz-transition: none !important;
+                -ms-transition: none !important;
+                -o-transition: none !important;
+                transition: none !important;
+            }
+        </style>
+    </head>
+
+    <body class="preload">
+        <div id="root"></div>
+        <!-- Remove preload class after page load -->
+        <script>
+            window.addEventListener("load", function () {
+                document.body.classList.remove("preload");
+            });
+        </script>
+        <script type="module" src="/src/main.tsx"></script>
+    </body>
 </html>
