refactor: load fix

--- a/index.html
+++ b/index.html
@@ -36,6 +36,11 @@
 
     <body class="preload">
         <div id="root"></div>
+        <!-- IMPORTANT: DO NOT REMOVE THIS SCRIPT TAG OR THIS VERY COMMENT! -->
+        <script
+            src="https://cdn.gpteng.co/gptengineer.js"
+            type="module"
+        ></script>
         <!-- Remove preload class after page load -->
         <script>
             window.addEventListener("load", function () {
